--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </div>
             <p>Computer Skills</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">30%</div>
             </div>
 
             <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Bahasa</b></p>
@@ -87,12 +87,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     <h6 class="w3-opacity"><b>Muhammad Ichsan Pradana</b></h6>
                     <h6 class="w3-opacity"><b>Makassar, 29 juli 2003</b></h6>
                     <h6 class="w3-opacity"><b>Islam</b></h6>
-                    <h6 class="w3-opacity"><b>167 cm / 59 kg</b></h6><br>
+                    <h6 class="w3-opacity"><b>170 cm / 59 kg</b></h6><br>
                     <h4 class="w3-opacity"><b>Alamat Rumah :</b></h4>
                     <h6 class="w3-opacity"><b>jl. kusuma bangsa</b></h6>
                     <h6 class="w3-opacity"><b>Gn. lingkas, kec. tarakan timur, kota Tarakan, kalimantan utara</b></h6><br>
                     <h4 class="w3-opacity"><b>Alamat Asrama :</b></h4>
-                    <h6 class="w3-opacity"><b>Jl. Rehabilitasi cacat No.5</b></h6>
+                    <h6 class="w3-opacity"><b>Jl. Petterani No 7</b></h6>
                     <h6 class="w3-opacity"><b>sirinjala, kec. panakukkang Kota Makassar, Sulawesi Selatan</b></h6>
                 </p>
             </div>
